# godot-lua-native

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
api/: api_agent.md  native_anim.lua  native_audio.lua  native_camera.lua  native_collision.lua  native_core.lua  native_debug_draw.lua  native_display.lua  native_input.lua  native_material.lua  native_node.lua  native_particles.lua  native_physics.lua  native_res.lua  native_skeleton.lua  native_system.lua  native_transform.lua
src/: README.md  cpp_guidelines.md
src/debug_draw/: debug_draw_build.cpp  debug_draw_scene.cpp  debug_draw_types.h
src/host/: extension_entry.cpp  extension_entry.h  gdextension_entry.cpp  gdextension_entry.h  host_thread_check.cpp  host_thread_check.h  lua_host.cpp  lua_host.h  thread_check.cpp  thread_check.h
src/lua/: lua_runtime.cpp  lua_runtime.h
src/modules/: anim_module.cpp  anim_module.h  audio_module.cpp  audio_module.h  camera_module.cpp  camera_module.h  collision_module.cpp  collision_module.h  core_module.cpp  core_module.h  debug_draw_module.cpp  debug_draw_module.h  display_module.cpp  display_module.h  gd_display.cpp  gd_display.h  input_module.cpp  input_module.h  material_module.cpp  material_module.h  node_module.cpp  node_module.h  particles_module.cpp  particles_module.h  physics_module.cpp  physics_module.h  res_module.cpp  res_module.h  skeleton_module.cpp  skeleton_module.h  system_module.cpp  system_module.h  transform_module.cpp  transform_module.h
test_project/: console.gd  project.godot
test_project/addons/luagd/: luagd.gdextension
test_project/tests/: assert.lua  main.lua  test_core.lua  test_display.lua  test_input.lua  test_system.lua
